--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <title>Happy Birthday Crush!</title>
   <link rel="stylesheet" href="./style.css">
 </head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap" rel="stylesheet">
 <body>
   <div class="birthday-message">
     <h1>Happiest Birthday</h1>
