--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <title>Happy Birthday Crush!</title>
   <link rel="stylesheet" href="./style.css">
 </head>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 <body>
   <div class="birthday-message">
-    <h1>Happiest Birthday</h1>
+    <h1>Happiest Birthday </h1>
 	<h2> Beautiful❤️</h2>
-    <p>I'LL GIVE U ALL THE LOVE THAT ONE CAN<3 </p>
-    <p>I hope your day is as amazing as you are!</p>
+    <p class="libre-baskerville-regular libre-baskerville-bold libre-baskerville-regular-italic">I'LL GIVE U ALL THE LOVE THAT ONE CAN<3 <br />
+     I hope your day is as amazing as you are!</p>
     <h3>Days 175,320 Hours 2 Minutes.</h3>
 	<button class="heart-button">Click to reveal a secret message!</button>
     <div class="secret-message">
-      <h2> 1 4 3 💌</h2>
+      <h2 class="libre-baskerville-regular libre-baskerville-bold libre-baskerville-regular-italic"> 1 4 3 💌</h2>
+      
     </div>
   </div>
   
